# sq2_ccv_manipulation

./: README.md  ccv_steer.world  collision_detection.py  keyop_ccv.py  package.xml  setup.cfg  setup.py  spawn_ccv.py  steer.world  twist_ccv.py
plugin/src/r2_ccv_steer/: CMakeLists.txt  package.xml
plugin/src/r2_ccv_steer/include/r2_ccv_steer/: gazebo_ros2_ccv_steer.hpp  gazebo_ros_steer_drive.hpp
plugin/src/r2_ccv_steer/src/: gazebo_ros2_ccv_steer.cpp  gazebo_ros_steer_drive.cpp
plugin/src/r2_ccv_steer/src/support/: diff.cpp
plugin/src/r2_ccv_steer/src/support/src/r2_joint_vel/: CMakeLists.txt  package.xml
plugin/src/r2_ccv_steer/src/support/src/r2_joint_vel/include/r2_joint_vel/: gazebo_ros2_joint_vel.hpp
plugin/src/r2_ccv_steer/src/support/src/r2_joint_vel/src/: gazebo_ros2_joint_vel.cpp
